@@ -21,11 +21,17 @@ if (! $ENV{GITHUB_TOKEN}){
         api_user => 'stevieb9',
         token    => $ENV{GITHUB_TOKEN},
         dir      => 't/backup',
+        _clean   => 1
     );
 
+    $o->limit(1);
     $o->repos;
 
-    is -e $o->dir, 1, "backup dir exists";
+    is -e $o->dir, undef, "backup dir doesn't exist before finish() called ok";
+
+    $o->finish;
+
+    is -e $o->dir, 1, "backup dir exists, and finish() did the right thing";
     is -d $o->dir, 1, "backup dir is a dir";
 }
 
