@@ -24,9 +24,14 @@ if (! $ENV{GITHUB_TOKEN}){
         _clean   => 1
     );
 
+    $o->limit(10);
     $o->issues;
 
-    is -d 't/backup/issues/test-brewbuild', 1, "isues have been saved";
+    is -d 't/backup/issues/berrybrew', undef, "before finish(), backup dir doesn't exist yet";
+
+    $o->finish;
+
+    is -d 't/backup/issues/berrybrew', 1, "issues have been saved, and finish() did the right thing";
 }
 
 done_testing();
